# newsletter-langgraph

./: .env.sample  .gitignore  README.md  alembic.ini  crontab-sample.txt  langgraph.json  pyproject.toml  test.ipynb
alembic/: env.py
alembic/versions/: 2025_08_02_2247-aa86f532a478_initial_migration.py  2025_08_04_0217-b9551e27e908_initial_migration.py
backend/: auth.py  db.py  graph.py  main.py  prompts.py  scheduler.py  settings.py  state.py  tools.py  webhook.py
backend/models/: __init__.py  base.py  newsletter.py  user.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: NewsletterAPI.ts
frontend/src/components/: AccountInfo.tsx  AuthCard.tsx  Dashboard.tsx  LandingPage.tsx  NewsLetterArticle.tsx  PrivateRoute.tsx  SubscriptionFailure.tsx  SubscriptionSuccess.tsx
frontend/src/hooks/: useAuth.ts
tests/: test_main.py  test_tools.py
