[project]
name = "newsletter-langgraph"
version = "0.1.0"
description = "Autonomous newsletter company with curation, billing, and marketing agents"
authors = [{ name = "Yudai Hatano", email = "noah.bjyu@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "langchain (>=0.3.27,<0.4.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "langgraph (>=0.5.4,<0.6.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "langchain-ollama (>=0.3.6,<0.4.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest-mock = "^3.14.1"
notebook = "^7.4.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
